fix(TournamentUpcomingMarkets): align body items to start

--- a/src/pages/Tournaments/TournamentsUpcomingMarkets.module.scss
+++ b/src/pages/Tournaments/TournamentsUpcomingMarkets.module.scss
@@ -229,7 +229,7 @@
       display: flex !important;
       flex-direction: column !important;
       justify-content: space-between !important;
-      align-items: center !important;
+      align-items: flex-start !important;
 
       @media (min-width: 1024px) {
         gap: var(--size-16);
